[gd_scene load_steps=2 format=3 uid="uid://dgdfkbq7dc3h2"]

[ext_resource type="Script" uid="uid://ddwygrjyge2sw" path="res://levels/main_menu/scripts/main_menu.gd" id="1_nt5r4"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_nt5r4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="CanvasLayer/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Asteroids"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="CanvasLayer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "PLay"

[node name="SettingsButton" type="Button" parent="CanvasLayer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="CanvasLayer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CanvasLayer/ColorRect/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
